aplicando sass a servicios

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "sass scss/style-home.scss style-home.min.css -w --no-source-map -s compressed",
-    "quien": "sass scss/style-quienes-somos.scss style-quienes-somos.min.css -w --no-source-map -s compressed"
-    
+    "quien": "sass scss/style-quienes-somos.scss style-quienes-somos.min.css -w --no-source-map -s compressed",
+    "serv": "sass scss/style-servicios.scss style-servicios.min.css -w --no-source-map -s compressed"
+
   },
   "repository": {
     "type": "git",
